apps/wealthfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealthfolio
  namespace: apps
spec:
  selector:
    app: wealthfolio
  ports:
    - name: http
      port: 8088
      targetPort: 8088
      protocol: TCP
