apps/wealthfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wealthfolio
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: wealthfolio.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wealthfolio
                port:
                  number: 8088
